# academic-automation-toolkit

./: LICENSE
codeforces-jplag-plagiarism/: .env.example  .gitignore  README.md  codeforces.py  parse_handles_from_moodle_test.py  pyproject.toml
