[project]
name = "s25-algo-prog-ru"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "codeforcesapipy>=2.0.12",
    "moodlepy>=0.24.1",
    "mosspy>=1.0.9",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
